--- a/ideaBoxFront/package.json
+++ b/ideaBoxFront/package.json
@@ -23,6 +23,7 @@
     "@angular/platform-browser-dynamic": "~8.2.12",
     "@angular/router": "~8.2.12",
     "@ckeditor/ckeditor5-angular": "^1.1.2",
+    "@ckeditor/ckeditor5-build-classic": "^15.0.0",
     "@ckeditor/ckeditor5-build-inline": "^15.0.0",
     "@material/icon-button": "^4.0.0",
     "hammerjs": "^2.0.8",
