--- a/ideaBoxFront/package.json
+++ b/ideaBoxFront/package.json
@@ -25,6 +25,7 @@
     "@ckeditor/ckeditor5-angular": "^1.1.2",
     "@ckeditor/ckeditor5-build-classic": "^15.0.0",
     "@ckeditor/ckeditor5-build-inline": "^15.0.0",
+    "@ckeditor/ckeditor5-word-count": "^15.0.0",
     "@material/icon-button": "^4.0.0",
     "hammerjs": "^2.0.8",
     "ng2-search-filter": "^0.5.1",
